cpp/triangle/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.009s
user	0m0.001s
sys	0m0.008s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'
[ 25%] Building CXX object CMakeFiles/triangle.dir/triangle_test.cpp.o
[ 50%] Building CXX object CMakeFiles/triangle.dir/triangle.cpp.o
[ 75%] Building CXX object CMakeFiles/triangle.dir/test/tests-main.cpp.o
[100%] Linking CXX executable triangle
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'
[100%] Built target triangle
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'
===============================================================================
All tests passed (15 assertions in 15 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'
[100%] Built target test_triangle
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/triangle.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/triangle.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)27158"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
test/catch.hpp                                38      27    71%   1593-1594,1628,1630,1642-1643,1647-1648,2227,2229,2560
triangle.cpp                                  26      25    96%   22
triangle_test.cpp                             45      45   100%   
------------------------------------------------------------------------------
TOTAL                                        109      97    89%
------------------------------------------------------------------------------
lines: 89.0% (97 out of 109)
branches: 40.8% (129 out of 316)

real	0m9.579s
user	0m8.926s
sys	0m0.651s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.137s
user	0m0.095s
sys	0m0.044s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.169s
user	0m0.112s
sys	0m0.059s

===============================================================================

Running: clang-format-16 -style=file -i ./triangle.cpp ./triangle_test.cpp ./triangle.h

real	0m0.020s
user	0m0.012s
sys	0m0.008s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./triangle.cpp ./triangle_test.cpp ./triangle.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/triangle.h:4:10: fatal error: 'stdexcept' file not found
#include <stdexcept>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/triangle.h.

real	0m0.470s
user	0m0.440s
sys	0m0.030s


real	0m0.471s
user	0m0.441s
sys	0m0.030s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
11416 warnings generated.
46801 warnings generated.
46801 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/triangle.h.
Suppressed 46806 warnings (46801 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m6.241s
user	0m6.175s
sys	0m0.065s
Running: clang-tidy-16 ./triangle.cpp ./triangle_test.cpp ./triangle.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/triangle/triangle.h:4:10: error: 'stdexcept' file not found [clang-diagnostic-error]
#include <stdexcept>
         ^~~~~~~~~~~


real	0m6.243s
user	0m6.175s
sys	0m0.068s

===============================================================================

